--- a/css/main.css
+++ b/css/main.css
@@ -32,17 +32,17 @@
   overflow: hidden;
 }
 #main_visual .main-slide-one {
-  background: url("/img/main_visual01_bg.jpg") no-repeat;
+  background: url("../img/main_visual01_bg.jpg") no-repeat;
   background-position: center;
   background-size: cover;
 }
 #main_visual .main-slide-two {
-  background: url("/img/main_visual01_bg.jpg") no-repeat;
+  background: url("../img/main_visual01_bg.jpg") no-repeat;
   background-position: center;
   background-size: cover;
 }
 #main_visual .main-slide-three {
-  background: url("/img/main_visual01_bg.jpg") no-repeat;
+  background: url("../img/main_visual01_bg.jpg") no-repeat;
   background-position: center;
   background-size: cover;
 }
@@ -323,7 +323,7 @@
   align-items: center;
   padding: 50px 15%;
   border-radius: 200px;
-  background: url("/img/koreit_banner_con.png") no-repeat #C5D6F4;
+  background: url("../img/koreit_banner_con.png") no-repeat #C5D6F4;
   background-position: 89%;
 }
 #koreit_banner .banner .txt span {
