--- a/css/main.scss
+++ b/css/main.scss
@@ -45,19 +45,19 @@
       }
       
       .main-slide-one {
-        background: url("/img/main_visual01_bg.jpg") no-repeat;
+        background: url("../img/main_visual01_bg.jpg") no-repeat;
         background-position: center;
         background-size: cover;
       }
       
       .main-slide-two {
-          background: url("/img/main_visual01_bg.jpg") no-repeat;
+          background: url("../img/main_visual01_bg.jpg") no-repeat;
         background-position: center;
         background-size: cover;
       }
       
       .main-slide-three {
-          background: url("/img/main_visual01_bg.jpg") no-repeat;
+          background: url("../img/main_visual01_bg.jpg") no-repeat;
         background-position: center;
         background-size: cover;
       }
@@ -384,7 +384,7 @@
         align-items: center;
         padding: 50px 15%;
         border-radius: 200px;
-        background: url("/img/koreit_banner_con.png")no-repeat  #C5D6F4;
+        background: url("../img/koreit_banner_con.png")no-repeat  #C5D6F4;
         background-position: 89%;
         .txt{
             span{
