--- a/css/common.scss
+++ b/css/common.scss
@@ -96,7 +96,7 @@ body{
             }
             &.email_con{
                 span{
-                    background: url("/img/email_con.png")no-repeat left 3px / 14px auto;
+                    background: url("../img/email_con.png")no-repeat left 3px / 14px auto;
                     padding: 0 0 0 20px;
                     font-size: 0.75rem;
                     display: block;
@@ -104,7 +104,7 @@ body{
             }
             &.support_con{
                 span{
-                    background: url("/img/support_con.png")no-repeat left 2px / 14px auto;
+                    background: url("../img/support_con.png")no-repeat left 2px / 14px auto;
                     padding: 0 0 0 17px;
                     font-size: 0.75rem;
                     display: block;
@@ -486,7 +486,7 @@ body{
                     .email_con{
                         border-right: 1px solid rgba(255,255,255,.5);
                         span{
-                            background: url("/img/email_con_w.png")no-repeat left 2px / 17px auto;
+                            background: url("../img/email_con_w.png")no-repeat left 2px / 17px auto;
                             padding: 0 0 0 23px;
                             font-size: 1rem;
                             
@@ -494,7 +494,7 @@ body{
                     }
                     .support_con{
                         span{
-                            background: url("/img/support_con_w.png")no-repeat left 0 / 18px auto;
+                            background: url("../img/support_con_w.png")no-repeat left 0 / 18px auto;
                             padding: 0 0 0 23px;
                             font-size: 1rem;
                             
@@ -1046,14 +1046,14 @@ body{
                         .email_con {
                             span{
                                 font-size: 0.75rem;
-                                background: url(/img/email_con_w.png) no-repeat left 1px/13px auto;
+                                background: url(../img/email_con_w.png) no-repeat left 1px/13px auto;
                                 padding: 0 0 0 18px;
                             }
                         }
                         .support_con{
                             span{
                                 font-size: 0.75rem;
-                                background: url(/img/support_con_w.png) no-repeat left 0/13px auto;
+                                background: url(../img/support_con_w.png) no-repeat left 0/13px auto;
                                 padding: 0px 0 0 16px;
                             }
                         }
