--- a/css/common.css
+++ b/css/common.css
@@ -79,13 +79,13 @@
   padding: 7px 12px;
 }
 #header .iconbar li.email_con span {
-  background: url("/img/email_con.png") no-repeat left 3px/14px auto;
+  background: url("../img/email_con.png") no-repeat left 3px/14px auto;
   padding: 0 0 0 20px;
   font-size: 0.75rem;
   display: block;
 }
 #header .iconbar li.support_con span {
-  background: url("/img/support_con.png") no-repeat left 2px/14px auto;
+  background: url("../img/support_con.png") no-repeat left 2px/14px auto;
   padding: 0 0 0 17px;
   font-size: 0.75rem;
   display: block;
@@ -429,12 +429,12 @@
   border-right: 1px solid rgba(255, 255, 255, 0.5);
 }
 #aside .navbar-nav_m ul > li:last-child .email_con span {
-  background: url("/img/email_con_w.png") no-repeat left 2px/17px auto;
+  background: url("../img/email_con_w.png") no-repeat left 2px/17px auto;
   padding: 0 0 0 23px;
   font-size: 1rem;
 }
 #aside .navbar-nav_m ul > li:last-child .support_con span {
-  background: url("/img/support_con_w.png") no-repeat left 0/18px auto;
+  background: url("../img/support_con_w.png") no-repeat left 0/18px auto;
   padding: 0 0 0 23px;
   font-size: 1rem;
 }
@@ -827,12 +827,12 @@
   }
   #aside .navbar-nav_m ul > li:last-child .email_con span {
     font-size: 0.75rem;
-    background: url(/img/email_con_w.png) no-repeat left 1px/13px auto;
+    background: url(../img/email_con_w.png) no-repeat left 1px/13px auto;
     padding: 0 0 0 18px;
   }
   #aside .navbar-nav_m ul > li:last-child .support_con span {
     font-size: 0.75rem;
-    background: url(/img/support_con_w.png) no-repeat left 0/13px auto;
+    background: url(../img/support_con_w.png) no-repeat left 0/13px auto;
     padding: 0px 0 0 16px;
   }
   #aside .navbar-nav_m ul > li a .arrow {
